[package]
name = "fxrazen"
version = "0.1.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/fxrazen"
keywords = ["actionscript", "as3", "compiler"]
description = "FXRazen compiler"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fxrazen"
path = "lib.rs"

[dependencies]
as3_parser = "1.0"
bitflags = { version = "2.4.1", features = ["serde"] }
by_address = "1.2.1"
bytes = "1"
dotenvy = "0.15.7"
file_paths = "1.0.0"
maplit = "1.0.2"
smodel = "1.0.9"