[package]
name = "fxrazen"
version = "0.1.5"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/fxrazen"
keywords = ["actionscript", "as3", "compiler"]
description = "FXRazen compiler"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fxrazen"
path = "lib.rs"

[dependencies]
as3_parser = "1"
bitflags = { version = "2.4.1", features = ["serde"] }
by_address = "1.2.1"
bytes = "1"
conv = "0.3.3"
dotenvy = "0.15.7"
file_paths = "1.0.0"
late_format = "1"
lazy_static = "1.4.0"
maplit = "1.0.2"
num-derive = "0.4.1"
num-traits = "0.2.17"
smodel = "1"